@@ -1,0 +1,1 @@
+ALTER TABLE ALTY UNSET PROPERTY 'csv.delimiter';
