@@ -1,0 +1,1 @@
+ALTER TABLE ALTY UNSET PROPERTY 'text.delimiter';
