@@ -318,6 +318,7 @@ TRUNCATE : T R U N C A T E;
 
 UNBOUNDED : U N B O U N D E D;
 UNKNOWN : U N K N O W N;
+UNSET : U N S E T;
 
 VALUES : V A L U E S;
 VAR_SAMP : V A R UNDERLINE S A M P;
