@@ -4,6 +4,9 @@ Release 0.12.0 - unreleased
 
   NEW FEATURES
 
+    TAJO-2165: Add 'ALTER TABLE UNSET PROPERTY' statement to Tajo DDL.
+    (Lee Dongjin via jihoon)
+
     TAJO-2160: Implement string_agg function. (Byunghwa Yun via jinho)
 
     TAJO-2148: Implement an example HTTP tablespace. (jihoon)
